QtBeef/src/Qt/qevent.bf

class QEnterEvent : IQEnterEvent, IQSinglePointEvent, IQPointerEvent, IQInputEvent, IQEvent
{
	private QEnterEvent_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QEnterEvent_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this(IQPointF localPos, IQPointF scenePos, IQPointF globalPos)
	{
		this.ptr = CQt.QEnterEvent_new((.)localPos?.ObjectPtr, (.)scenePos?.ObjectPtr, (.)globalPos?.ObjectPtr);
	}
	public this(IQPointF localPos, IQPointF scenePos, IQPointF globalPos, IQPointingDevice device)
	{
		this.ptr = CQt.QEnterEvent_new2((.)localPos?.ObjectPtr, (.)scenePos?.ObjectPtr, (.)globalPos?.ObjectPtr, (.)device?.ObjectPtr);
	}
	public ~this()
	{
		CQt.QEnterEvent_Delete(this.ptr);
	}
	public QEnterEvent_Ptr Clone()
	{
		return QEnterEvent_Ptr(CQt.QEnterEvent_Clone((.)this.ptr.Ptr));
	}
	public QPoint_Ptr Pos()
	{
		return QPoint_Ptr(CQt.QEnterEvent_Pos((.)this.ptr.Ptr));
	}
	public QPoint_Ptr GlobalPos()
	{
		return QPoint_Ptr(CQt.QEnterEvent_GlobalPos((.)this.ptr.Ptr));
	}
	public c_int X()
	{
		return CQt.QEnterEvent_X((.)this.ptr.Ptr);
	}
	public c_int Y()
	{
		return CQt.QEnterEvent_Y((.)this.ptr.Ptr);
	}
	public c_int GlobalX()
	{
		return CQt.QEnterEvent_GlobalX((.)this.ptr.Ptr);
	}
	public c_int GlobalY()
	{
		return CQt.QEnterEvent_GlobalY((.)this.ptr.Ptr);
	}
	public QPointF_Ptr LocalPos()
	{
		return QPointF_Ptr(CQt.QEnterEvent_LocalPos((.)this.ptr.Ptr));
	}
	public QPointF_Ptr WindowPos()
	{
		return QPointF_Ptr(CQt.QEnterEvent_WindowPos((.)this.ptr.Ptr));
	}
	public QPointF_Ptr ScreenPos()
	{
		return QPointF_Ptr(CQt.QEnterEvent_ScreenPos((.)this.ptr.Ptr));
	}
	public Qt_MouseButton Button()
	{
		return CQt.QSinglePointEvent_Button((.)this.ptr.Ptr);
	}
	public void* Buttons()
	{
		return CQt.QSinglePointEvent_Buttons((.)this.ptr.Ptr);
	}
	public QPointF_Ptr Position()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_Position((.)this.ptr.Ptr));
	}
	public QPointF_Ptr ScenePosition()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_ScenePosition((.)this.ptr.Ptr));
	}
	public QPointF_Ptr GlobalPosition()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_GlobalPosition((.)this.ptr.Ptr));
	}
	public bool IsBeginEvent()
	{
		return CQt.QSinglePointEvent_IsBeginEvent((.)this.ptr.Ptr);
	}
	public bool IsUpdateEvent()
	{
		return CQt.QSinglePointEvent_IsUpdateEvent((.)this.ptr.Ptr);
	}
	public bool IsEndEvent()
	{
		return CQt.QSinglePointEvent_IsEndEvent((.)this.ptr.Ptr);
	}
	public QObject_Ptr ExclusivePointGrabber()
	{
		return QObject_Ptr(CQt.QSinglePointEvent_ExclusivePointGrabber((.)this.ptr.Ptr));
	}
	public void SetExclusivePointGrabber(IQObject exclusiveGrabber)
	{
		CQt.QSinglePointEvent_SetExclusivePointGrabber((.)this.ptr.Ptr, (.)exclusiveGrabber?.ObjectPtr);
	}
	public QPointingDevice_Ptr PointingDevice()
	{
		return QPointingDevice_Ptr(CQt.QPointerEvent_PointingDevice((.)this.ptr.Ptr));
	}
	public QPointingDevice_PointerType PointerType()
	{
		return CQt.QPointerEvent_PointerType((.)this.ptr.Ptr);
	}
	public void SetTimestamp(c_ulonglong timestamp)
	{
		CQt.QPointerEvent_SetTimestamp((.)this.ptr.Ptr, timestamp);
	}
	public void* PointCount()
	{
		return CQt.QPointerEvent_PointCount((.)this.ptr.Ptr);
	}
	public QEventPoint_Ptr Point(void* i)
	{
		return QEventPoint_Ptr(CQt.QPointerEvent_Point((.)this.ptr.Ptr, i));
	}
	public void** Points()
	{
		return CQt.QPointerEvent_Points((.)this.ptr.Ptr);
	}
	public QEventPoint_Ptr PointById(c_int id)
	{
		return QEventPoint_Ptr(CQt.QPointerEvent_PointById((.)this.ptr.Ptr, id));
	}
	public bool AllPointsGrabbed()
	{
		return CQt.QPointerEvent_AllPointsGrabbed((.)this.ptr.Ptr);
	}
	public bool AllPointsAccepted()
	{
		return CQt.QPointerEvent_AllPointsAccepted((.)this.ptr.Ptr);
	}
	public void SetAccepted(bool accepted)
	{
		CQt.QPointerEvent_SetAccepted((.)this.ptr.Ptr, accepted);
	}
	public QObject_Ptr ExclusiveGrabber(IQEventPoint point)
	{
		return QObject_Ptr(CQt.QPointerEvent_ExclusiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr));
	}
	public void SetExclusiveGrabber(IQEventPoint point, IQObject exclusiveGrabber)
	{
		CQt.QPointerEvent_SetExclusiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)exclusiveGrabber?.ObjectPtr);
	}
	public void ClearPassiveGrabbers(IQEventPoint point)
	{
		CQt.QPointerEvent_ClearPassiveGrabbers((.)this.ptr.Ptr, (.)point?.ObjectPtr);
	}
	public bool AddPassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_AddPassiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)grabber?.ObjectPtr);
	}
	public bool RemovePassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_RemovePassiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)grabber?.ObjectPtr);
	}
	public QInputDevice_Ptr Device()
	{
		return QInputDevice_Ptr(CQt.QInputEvent_Device((.)this.ptr.Ptr));
	}
	public QInputDevice_DeviceType DeviceType()
	{
		return CQt.QInputEvent_DeviceType((.)this.ptr.Ptr);
	}
	public void* Modifiers()
	{
		return CQt.QInputEvent_Modifiers((.)this.ptr.Ptr);
	}
	public void SetModifiers(void* modifiers)
	{
		CQt.QInputEvent_SetModifiers((.)this.ptr.Ptr, modifiers);
	}
	public c_ulonglong Timestamp()
	{
		return CQt.QInputEvent_Timestamp((.)this.ptr.Ptr);
	}
	public QEvent_Type Type()
	{
		return CQt.QEvent_Type((.)this.ptr.Ptr);
	}
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous((.)this.ptr.Ptr);
	}
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted((.)this.ptr.Ptr);
	}
	public void Accept()
	{
		CQt.QEvent_Accept((.)this.ptr.Ptr);
	}
	public void Ignore()
	{
		CQt.QEvent_Ignore((.)this.ptr.Ptr);
	}
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent((.)this.ptr.Ptr);
	}
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent((.)this.ptr.Ptr);
	}
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent((.)this.ptr.Ptr);
	}
	public c_int RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	public c_int RegisterEventType1(c_int hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
}
interface IQEnterEvent : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QMouseEvent
// --------------------------------------------------------------
[CRepr]
struct QMouseEvent_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QMouseEvent_new")]
	public static extern QMouseEvent_Ptr QMouseEvent_new(QEvent_Type type, void** localPos, Qt_MouseButton button, void* buttons, void* modifiers);
	[LinkName("QMouseEvent_new2")]
	public static extern QMouseEvent_Ptr QMouseEvent_new2(QEvent_Type type, void** localPos, void** globalPos, Qt_MouseButton button, void* buttons, void* modifiers);
	[LinkName("QMouseEvent_new3")]
	public static extern QMouseEvent_Ptr QMouseEvent_new3(QEvent_Type type, void** localPos, void** scenePos, void** globalPos, Qt_MouseButton button, void* buttons, void* modifiers);
	[LinkName("QMouseEvent_new4")]
	public static extern QMouseEvent_Ptr QMouseEvent_new4(QEvent_Type type, void** localPos, void** scenePos, void** globalPos, Qt_MouseButton button, void* buttons, void* modifiers, Qt_MouseEventSource source);
	[LinkName("QMouseEvent_new5")]
	public static extern QMouseEvent_Ptr QMouseEvent_new5(QEvent_Type type, void** localPos, Qt_MouseButton button, void* buttons, void* modifiers, void** device);
	[LinkName("QMouseEvent_new6")]
	public static extern QMouseEvent_Ptr QMouseEvent_new6(QEvent_Type type, void** localPos, void** globalPos, Qt_MouseButton button, void* buttons, void* modifiers, void** device);
	[LinkName("QMouseEvent_new7")]
	public static extern QMouseEvent_Ptr QMouseEvent_new7(QEvent_Type type, void** localPos, void** scenePos, void** globalPos, Qt_MouseButton button, void* buttons, void* modifiers, void** device);
	[LinkName("QMouseEvent_new8")]
	public static extern QMouseEvent_Ptr QMouseEvent_new8(QEvent_Type type, void** localPos, void** scenePos, void** globalPos, Qt_MouseButton button, void* buttons, void* modifiers, Qt_MouseEventSource source, void** device);
	[LinkName("QMouseEvent_Delete")]
	public static extern void QMouseEvent_Delete(QMouseEvent_Ptr self);
	[LinkName("QMouseEvent_Clone")]
	public static extern void** QMouseEvent_Clone(void* self);
	[LinkName("QMouseEvent_Pos")]
	public static extern void* QMouseEvent_Pos(void* self);
	[LinkName("QMouseEvent_GlobalPos")]
	public static extern void* QMouseEvent_GlobalPos(void* self);
	[LinkName("QMouseEvent_X")]
	public static extern c_int QMouseEvent_X(void* self);
	[LinkName("QMouseEvent_Y")]
	public static extern c_int QMouseEvent_Y(void* self);
	[LinkName("QMouseEvent_GlobalX")]
	public static extern c_int QMouseEvent_GlobalX(void* self);
	[LinkName("QMouseEvent_GlobalY")]
	public static extern c_int QMouseEvent_GlobalY(void* self);
	[LinkName("QMouseEvent_LocalPos")]
	public static extern void* QMouseEvent_LocalPos(void* self);
	[LinkName("QMouseEvent_WindowPos")]
	public static extern void* QMouseEvent_WindowPos(void* self);
	[LinkName("QMouseEvent_ScreenPos")]
	public static extern void* QMouseEvent_ScreenPos(void* self);
	[LinkName("QMouseEvent_Source")]
	public static extern Qt_MouseEventSource QMouseEvent_Source(void* self);
	[LinkName("QMouseEvent_Flags")]
	public static extern void* QMouseEvent_Flags(void* self);
}
